--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
 <body>
     <div class="container">
         <div id="buttons">
+            <button id="20-secs" onclick="firstSec()">20 SECS</button>
             <button id="cappuccino" onclick="cappuccino()">CAPPUCINO 5</button>
             <button id="the-15" onclick="the15()">THE 15</button>
             <button id="dejeuner-20" onclick="dejeuner20()">PETIT DEJEUNER 20</button>
             <button id="dejeuner-30" onclick="dejeuner30()">DEJEUNER 30</button>
-            <button id="20-secs" onclick="firstSec()">20 SECS</button>
         </div>
         <div id="agogo-input">
             <input type="number" id="minute" placeholder="Enter time in minutes">
         </div>
 
-        <div class="stopWatch">
-            <h1 id="displayTime">00:00:00</h1>
-        </div>
+        <div id="timer"></div>
     </div>
 
     <script src="script.js"></script>
