--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="dejeuner-30" onclick="dejeuner30()">DEJEUNER 30</button>
         </div>
         <div id="agogo-input">
-            <input id="minute" placeholder="Enter time in minutes">
+            <input id="minute" type="number" placeholder="Enter time in minutes">
         </div>
 
         <div id="timer"></div>
